--- a/tesi.tex
+++ b/tesi.tex
@@ -16,12 +16,11 @@
 
 %listening
 \lstset{
-basicstyle=\footnotesize,
-language=C,                % choose the language of the code
-%numbers=left,                   % where to put the line-numbers
+language=Python,                % choose the language of the code
+numbers=left,                   % where to put the line-numbers
 %stepnumber=2,                   % the step between two line-numbers. If it's 1 each line 
 %numbersep=5pt,                  % how far the line-numbers are from the code
-frame=single,                % adds a frame around the code
+%frame=single,                % adds a frame around the code
 tabsize=2,                % sets default tabsize to 2 spaces
 captionpos=b,                   % sets the caption-position to bottom
 breaklines=true,                % sets automatic line breaking
