--- a/tesi.bib
+++ b/tesi.bib
@@ -35,6 +35,16 @@ month = mar}
   urldate = {2014-11-25}
 }
 
+@ARTICLE{fox-03,
+    author = {Maria Fox and Derek Long},
+    title = {PDDL2.1: An extension to PDDL for expressing temporal planning domains},
+    journal = {Journal of Artificial Intelligence Research},
+url={http://www.cs.cmu.edu/afs/cs/project/jair/pub/volume20/fox03a.pdf},
+    year = {2003},
+    volume = {20},
+    pages = {2003}
+}
+
 @MISC{pddl-97,
     author = {},
     title = {PDDL - The Planning Domain Definition Language},
@@ -86,6 +96,13 @@ author= {c0ntex},
 title= {Bypassing non-executable-stack during exploitation using return-to-libc},
 url = {http://www.infosecwriters.com/text_resources/pdf/return-to-libc.pdf},
 year={96},
+}
+
+@misc{exploit-exercise,
+author= {},
+title= {},
+url = {https://exploit-exercises.com/fusion/},
+year={},
 }
 
 
