--- a/tesi.tex
+++ b/tesi.tex
@@ -80,7 +80,7 @@ stringstyle=\footnotesize,
 %% \Margini{2.0cm}{1.5cm}{2.0cm}{1.5cm}
 %% \end{frontespizio}
 
-\lstset{language=C}
+\lstset{language=Python}
 
 %Per stampare solo fronte correggere i vari clearpage e newpage 
 %neccessari per l'aggiunta di pagine bianche aggiuntive nel fronte-retro.
@@ -93,6 +93,7 @@ stringstyle=\footnotesize,
 \include{introduzione}
 \include{dropper}
 \include{exploit}
+\include{conclusioni}
 
 %% \clearpage{\pagestyle{empty}\cleardoublepage}
 %% \listoffigures \addcontentsline{toc}{chapter}{Indice delle figure}
